--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+spring.datasource.url= jdbc:mysql://localhost:3306/test
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=apiuser
+spring.datasource.password=webapp
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
